console namespace breaks putting properties on console.__proto__ https://bugs.webkit.org/show_bug.cgi?id=157782 <rdar://problem/26250526>

Reviewed by Geoffrey Garen.

Source/JavaScriptCore:

Some websites currently depend on console.__proto__ existing and being
a separate object from Object.prototype. This patch adds back a basic
console.__proto__ object, but all the console functions are left on
the ConsoleObject itself.

* runtime/JSGlobalObject.cpp:
(JSC::createConsoleProperty):

LayoutTests:

* js/console-expected.txt:
* js/console.html:

Canonical link: https://commits.webkit.org/175926@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201022 268f45cc-cd09-0410-ab3c-d52691b4dbfc